<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Muzei Superheroes</string>

    <string name="title_activity_settings">Muzei Superheroes Settings</string>

    <string name="app_description">Retrieve your favorite Marvel characters and discover many others.</string>
    <string name="command_save">Save</string>
    <string name="command_publish">Share</string>
    <string name="notification_new_wallpaper">New wallpaper saved</string>
    <string name="share_template">My Android wallpaper today is \'%1$s\' by %2$s. \n\n#Muzei Superheroes \n\n%3$s
    </string>
    <string name="marvel_copyright">Marvel</string>
    <string name="app_url">https://play.google.com/store/apps/details?id=com.arnaudpiroelle.muzei.marvel</string>
    <string name="share_with">Share with</string>

    <!-- Preferences -->
    <string name="prefs_header_general">General</string>
    <string name="prefs_header_updates">Update</string>
    <string name="prefs_header_about">About</string>
    <string name="prefs_header_tags">Tags</string>

    <string name="pref_source_key">pref_source</string>
    <string name="pref_source_title">Source</string>
    <string name="pref_intervalpicker_key">pref_intervalpicker</string>
    <string name="pref_intervalpicker_title">Update interval</string>
    <string name="pref_intervalpicker_defaultvalue">1440</string>
    <string name="pref_wifiswitch_key">pref_wifiswitch</string>
    <string name="pref_wifiswitch_title">Only update on Wi-Fi</string>
    <string name="pref_wifiswitch_summary">Updating on Wi-Fi helps to reduce mobile data usage.</string>
    <string name="pref_about_key">pref_about</string>
    <string name="pref_about_summary">Version %1$s
        \n© %2$d Arnaud Piroelle
    </string>
    <string name="pref_source_defaultvalue">RandomCustomSource</string>
    <string name="title_activity_launcher">Muzei Superheroes</string>
    <string name="extension_description">Muzei Superheroes is an extension for the Muzei live-wallpaper app.
        \n\nKey features:
        \n- Marvel characters or comics wallpapers every day
        \n- WiFi-only download mode
        \n- Customizable update interval
        \n- Switch to next picture manually
        \n- Save picture on your devices
        \n- Share picture with your friends
        \n\nHow to use:
        \n- Install Muzei : http://play.google.com/store/apps/details?id=net.nurik.roman.muzei
        \n- Open Muzei app
        \n- Select "Muzei Superheroes" as your source
        \n- Customize "Muzei Superheroes" configuration
        \n- Done
        \n\nData provided by Marvel. © 2015 MARVEL
    </string>
    <string name="muzei_market">Install Muzei App</string>
    <string name="remove_activity">Remove from application list</string>

    <string name="pref_tags_key">pref_tags</string>
    <string name="pref_tags_values_key">pref_tags_values</string>
    <string name="no_hashtag">No Tags</string>
    <string name="add">Add</string>
    <string name="tag_hint">Tag</string>
    <string name="bad_tag_format">Bad tag format</string>
    <string name="pref_tags">Manage tags</string>

    <string name="pref_tags_default">[\"Deadpool\",\"X-Men\",\"Iron man\"]</string>
    <string name="already_installed">Requirement already installed, this icon will be deleted</string>

    <string name="pref_type_key">pref_type</string>
    <string name="pref_type_title">Types</string>
    <string name="pref_type_defaultvalue">CHARACTER</string>
    <string name="chooser_market">Choose your market:</string>
    <string name="marvel_provider">Data provided by Marvel. © 2015 MARVEL</string>

</resources>
