<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
            android:title="@string/prefs_header_general">
        <ListPreference
                android:key="@string/pref_source_key"
                android:title="@string/pref_source_title"
                android:summary="%s"
                android:entries="@array/list_source_entries"
                android:entryValues="@array/list_source_values"
                android:defaultValue="@string/pref_source_defaultvalue"
                android:persistent="true"/>
        <ListPreference
                android:key="@string/pref_type_key"
                android:title="@string/pref_type_title"
                android:summary="%s"
                android:entries="@array/list_type_entries"
                android:entryValues="@array/list_type_values"
                android:defaultValue="@string/pref_type_defaultvalue"
                android:persistent="true"/>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/prefs_header_updates">
        <ListPreference
                android:key="@string/pref_intervalpicker_key"
                android:title="@string/pref_intervalpicker_title"
                android:summary="%s"
                android:entries="@array/list_intervalpicker_entries"
                android:entryValues="@array/list_intervalpicker_values"
                android:defaultValue="@string/pref_intervalpicker_defaultvalue"
                android:persistent="true"/>

        <SwitchPreference
                android:key="@string/pref_wifiswitch_key"
                android:title="@string/pref_wifiswitch_title"
                android:summary="@string/pref_wifiswitch_summary"
                android:defaultValue="false"
                android:persistent="true"/>
    </PreferenceCategory>

    <PreferenceCategory
            android:persistent="false"
            android:title="@string/prefs_header_tags">
        <Preference
                android:key="@string/pref_tags_key"
                android:background="@null"
                android:enabled="true"
                android:selectable="true"
                android:title="@string/pref_tags"/>
    </PreferenceCategory>

    <PreferenceCategory
            android:persistent="false"
            android:title="@string/prefs_header_about">
        <Preference
                android:key="@string/pref_about_key"
                android:background="@null"
                android:enabled="false"
                android:selectable="false"
                android:summary="@string/pref_about_summary"
                android:title="@string/app_name"/>
    </PreferenceCategory>
</PreferenceScreen>