<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent" tools:context=".app.ui.launcher.LauncherActivity">

    <TextView
            android:id="@+id/extension_description"
            android:layout_margin="5dp"
            android:text="@string/extension_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    <Button
            android:id="@+id/install_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/muzei_market"/>

    <Button
            android:id="@+id/remove_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/remove_activity"/>


</LinearLayout>
