<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_margin="15dp">

        <EditText
                android:id="@+id/tag"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:hint="@string/tag_hint"
                android:singleLine="true"
                android:textColorHint="#30000000"
                android:textCursorDrawable="@null"/>

        <ImageButton
                android:id="@+id/add"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/ic_add"
                android:contentDescription="@string/add"/>

    </LinearLayout>

    <ListView
            android:id="@+id/list"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"/>

    <TextView
            android:id="@+id/empty"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_margin="10dp"
            android:gravity="center"
            android:text="@string/no_hashtag"
            android:textSize="22sp"
            android:visibility="gone"/>
</LinearLayout>
